# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml
.qwen/: settings.json
backend/src/lms_backend/routers/: items.py
caddy/: Caddyfile
lab/setup/: setup-simple.md
lab/tasks/required/: task-1.md
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  client.py  server.py  settings.py  tools.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/: AGENTS.md  TOOLS.md
nanobot/workspace/sessions/: cli_task1a-labs.jsonl  cli_task1a-loop.jsonl  cli_task1a-simple.jsonl  cli_task1b-health.jsonl  cli_task1b-labs.jsonl  cli_task1c-scores.jsonl
nanobot/workspace/skills/cron/: SKILL.md
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
otel-collector/: otel-collector-config.yaml
scripts/: query-qwen-code-api.py
wiki/: operating-system.md  vs-code.md
